# mcp-proxy

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  codecov.yml  pyproject.toml  smithery.yaml
.github/workflows/: cd.yaml  ci.yaml  update-uv-lock.yml
src/mcp_proxy/: __init__.py  __main__.py  proxy_server.py  sse_client.py  sse_server.py
tests/: __init__.py  test_init.py  test_proxy_server.py  test_sse_server.py
